# ASDCache

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: build.yml  documentation.yml  documentation_dev.yml  test.yml
assets/javascript/: mathjax.js
changelog/: changelog.md  index.html
citing/: citing.md  index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/assets/scripts/: gen_ref_pages.py
dev/changelog/: index.html
dev/license/: index.html
dev/reference/ASDCache/: index.html
dev/reference/ASDCache/ASDCache/: index.html
dev/reference/ASDCache/utils/: index.html
dev/schema/: index.html
dev/search/: search_index.json
docs/: citing.md  examples.ipynb  schema.md
docs/assets/javascript/: mathjax.js
examples/: examples.ipynb  index.html
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/assets/scripts/: gen_ref_pages.py
latest/changelog/: index.html
latest/examples/: examples.ipynb
latest/reference/ASDCache/: index.html
latest/schema/: index.html
license/: index.html  license.md
reference/ASDCache/: index.html
reference/ASDCache/ASDCache/: index.html
reference/SUMMARY/: SUMMARY.md  index.html
reference/readasd/: index.html  index.md
reference/readasd/readASD/: index.html  readASD.md
schema/: index.html
search/: search_index.json
src/ASDCache/: ASDCache.py  __init__.py  utils.py
src/readasd/: __init__.py  readASD.py
tests/: conftest.py  test_BibCache.py  test_LevelCacheAccessor.py  test_SpectraCache.py  test_cache.sqlite  test_nist.py  test_parsing.py  test_utils.py
v0.2.2/citing/: index.html
v0.2.2/examples/: index.html
v0.2.2/license/: index.html
v0.2.2/reference/ASDCache/ASDCache/: index.html
v0.2.2/reference/SUMMARY/: index.html
v0.2.2/search/: search_index.json
v0.2.3/: sitemap.xml
v0.2.3/changelog/: index.html
v0.2.3/citing/: index.html
v0.2.3/examples/: examples.ipynb  index.html
v0.2.4/citing/: index.html
v0.2.4/examples/: index.html
v0.2.4/reference/ASDCache/: index.html
v0.2.4/reference/ASDCache/ASDCache/: index.html
v0.2.4/search/: search_index.json
